parser/minishell.bnf
<letter>	    ::= a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z|
                    A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z
<digit>			::= 0|1|2|3|4|5|6|7|8|9
<number>		::= <digit> <digit>*
<word>			::= <letter> <letter>*
				|	<word> '_'
<word_list>		::= <word>*

--------------------------

<command_line>	::= <pipeline> '&&' <newline> <command_line>
				|   <pipeline> '||' <newline> <command_line>
				|   <pipeline>

<pipeline>	::=  <command> '|' <newline> <pipeline>
			|   <command>

<command>	::= <subshell>
			|	<simple_command>

<subshell>	::=	'(' <compound_list> ')' <redirection_list>
			|	'(' <compound_list> ')'

<compound_list>	::=	<pipeline> '&&' <newline> <compound_list>
           		|	<pipeline> '||' <newline> <compound_list>
           		|	<pipeline> '\n' <newline> <compound_list>
           		|	<pipeline>

<simple_command>	::= <simple_command_element> <simple_command>
					|   <simple_command_element>

<simple_command_element>	::= <word>
							|	<redirection>

<redirection_list> ::= <redirection> <redirection_list>
                   |  <redirection>

<redirection>	::= <number>? '>' <word>
				|	<number>? '<' <word>
				|	<number>? '>>' <word>
				|	<number>? '<<' <word>
